--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ psycopg2-binary = "*"
 dj-database-url = "*"
 gunicorn = "*"
 djangorestframework = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.7"
